--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "format": "prettier --write \"src/**/*.{js,jsx,css,json} \" ",
     "lint": "eslint \"src/**/*.{js,jsx} \" ",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --silent",
+    "test:update": "jest --silent -u",
+    "test:watch": "jest --silent --watch",
+    "test:coverage": "jest --silent --coverage",
     "dev": "parcel src/index.html"
   },
   "repository": {
@@ -32,8 +35,10 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
+    "jest": "^23.6.0",
     "parcel-bundler": "^1.10.1",
-    "prettier": "^1.14.3"
+    "prettier": "^1.14.3",
+    "react-test-renderer": "^16.5.2"
   },
   "dependencies": {
     "@reach/router": "^1.2.1",
